Cleanup and beatification.